--- a/6_DataViz/2_dataviz_in_python.ipynb
+++ b/6_DataViz/2_dataviz_in_python.ipynb
@@ -1,6 +1,454 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Visualization in Python II\n",
+    "In this notebook we will learn how to create visualizations using [__plotly__](https://plotly.com/python/). The plotly Python library is an interactive, open-source plotting library that supports over many chart types covering a wide range of statistical, financial, geographic, scientific, and 3-dimensional use-cases. We will be exploring the advanced functionality in plotly, as map rendering and interactive features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Maps\n",
+    "\n",
+    "Plotly allows the creation of interactive maps. Here we load a [GeoJSON](https://geojson.org/) file which the geometry information for US counties."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib.request import urlopen\n",
+    "import json\n",
+    "\n",
+    "# Load GeoJSON\n",
+    "with urlopen('https://raw.githubusercontent.com/plotly/datasets/master/geojson-counties-fips.json') as response:\n",
+    "    counties = json.load(response)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this map data structure, the `features.id` field stores the reference [FIPS code](https://en.wikipedia.org/wiki/FIPS_county_code) of the county. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show county 0 features\n",
+    "counties[\"features\"][0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, let's load unemployment data by county, which is also indexed by FIPS code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Unemployment data by county as a dataframe\n",
+    "import pandas as pd\n",
+    "df_unemployment = pd.read_csv(\"https://raw.githubusercontent.com/plotly/datasets/master/fips-unemp-16.csv\",dtype={\"fips\": str})\n",
+    "df_unemployment.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are several ways to create maps combining this information un plotly, we will be using [`plotly.express`](https://plotly.com/python/plotly-express/), an easy-to-use, high-level interface to Plotly, which operates on a variety of types of data and produces easy-to-style figures. In particular, we are using [`choropleth_mapbox`](https://plotly.com/python/mapbox-county-choropleth/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "\n",
+    "# The data to be shown (df_unemployment), the map (counties), the matching key (fips) and the variable (unemp) \n",
+    "fig = px.choropleth_mapbox(df_unemployment, geojson=counties, locations='fips', color='unemp',\n",
+    "                           color_continuous_scale=\"Inferno\",\n",
+    "                           range_color=(0, 12),\n",
+    "                           mapbox_style=\"carto-positron\",\n",
+    "                           zoom=3, center = {\"lat\": 37.0902, \"lon\": -95.7129},\n",
+    "                           opacity=0.5,\n",
+    "                           labels={'unemp':'unemployment rate'}\n",
+    "                          )\n",
+    "\n",
+    "fig.update_layout(margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0}) # margins\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the GeoJSON you are using either does not have an id field or you wish you use one of the keys in the properties field, you may use the `featureidkey` parameter to specify where to match the values of `locations`. In the following GeoJSON object/data-file pairing, the values of `properties.distric` match the values of the district column:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_elections = px.data.election() # Load example dataframe\n",
+    "geojson      = px.data.election_geojson() # Load example geojson\n",
+    "\n",
+    "# Matching keys\n",
+    "print(df_elections[\"district\"][2])\n",
+    "print(geojson[\"features\"][0][\"properties\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "fig = px.choropleth_mapbox(df_elections, geojson=geojson, color=\"Bergeron\",\n",
+    "                           locations=\"district\", featureidkey=\"properties.district\", # specify matching columns\n",
+    "                           center={\"lat\": 45.5517, \"lon\": -73.7073},\n",
+    "                           mapbox_style=\"carto-positron\", zoom=9)\n",
+    "\n",
+    "fig.update_layout(margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0})\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If instead of using a continuous variable as `Bergeron` to colorize the map we select a non-numerical column like `winner`, `choropleth_mapbox` will automatically show a discret scale and the legend. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "fig = px.choropleth_mapbox(df_elections, geojson=geojson, color=\"winner\",  # discrete variable\n",
+    "                           locations=\"district\", featureidkey=\"properties.district\",\n",
+    "                           center={\"lat\": 45.5517, \"lon\": -73.7073},\n",
+    "                           mapbox_style=\"carto-positron\", zoom=9)\n",
+    "\n",
+    "fig.update_layout(margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0})\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is also possible to show markers on top of a map using [`scatter_mapbox`](https://plotly.com/python/scattermapbox/):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = px.data.carshare()\n",
+    "\n",
+    "fig = px.scatter_mapbox(df, lat=\"centroid_lat\", lon=\"centroid_lon\", color=\"peak_hour\", size=\"car_hours\",\n",
+    "                  color_continuous_scale=px.colors.cyclical.IceFire, size_max=15, zoom=10,\n",
+    "                  mapbox_style=\"carto-positron\")\n",
+    "\n",
+    "fig.update_layout(margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0})\n",
+    "\n",
+    "fig.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interaction\n",
+    "Let's go through a series of interactive examples. \n",
+    "\n",
+    "### Buttons\n",
+    "You can find more examples on using buttons [here](https://plotly.com/python/custom-buttons/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "\n",
+    "# Load dataset\n",
+    "df_volcano = pd.read_csv(\"https://raw.githubusercontent.com/plotly/datasets/master/volcano.csv\")\n",
+    "df_volcano"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create figure to visualize data as a 3D surface or as a 2D heatmap. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create figure\n",
+    "fig = go.Figure()\n",
+    "\n",
+    "# Add surface trace\n",
+    "fig.add_trace(go.Surface(z=df_volcano.values.tolist(), colorscale=\"Inferno\"))\n",
+    "\n",
+    "# Custom plot sizing\n",
+    "fig.update_layout(\n",
+    "    width=800,\n",
+    "    height=900,\n",
+    "    autosize=False,\n",
+    "    margin=dict(t=0, b=0, l=0, r=0),\n",
+    "    template=\"plotly_white\", \n",
+    ")\n",
+    "\n",
+    "# Update 3D scene options\n",
+    "fig.update_scenes(\n",
+    "    aspectratio=dict(x=1, y=1, z=0.7),\n",
+    "    aspectmode=\"manual\"\n",
+    ")\n",
+    "    \n",
+    "# Add simple menu with 2 buttons  \n",
+    "fig.update_layout(\n",
+    "    updatemenus=[\n",
+    "        dict(\n",
+    "            type = \"buttons\",\n",
+    "            direction = \"left\",\n",
+    "            buttons=list([\n",
+    "                dict(\n",
+    "                    args=[\"type\", \"surface\"],\n",
+    "                    label=\"3D Surface\",\n",
+    "                    method=\"restyle\"\n",
+    "                ),\n",
+    "                dict(\n",
+    "                    args=[\"type\", \"heatmap\"],\n",
+    "                    label=\"Heatmap\",\n",
+    "                    method=\"restyle\"\n",
+    "                )\n",
+    "            ]),\n",
+    "            pad={\"r\": 10, \"t\": 10},\n",
+    "            showactive=True,\n",
+    "            x=0.11,\n",
+    "            xanchor=\"left\",\n",
+    "            y=1.1,\n",
+    "            yanchor=\"top\"\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Add annotation to buttons\n",
+    "fig.update_layout(\n",
+    "    annotations=[\n",
+    "        dict(text=\"Trace type:\", showarrow=False, x=0, y=1.08, yref=\"paper\", align=\"left\")\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Slider\n",
+    "You can find more examples on using sliders [here](https://plotly.com/python/sliders/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "import plotly.graph_objects as go\n",
+    "import numpy as np\n",
+    "\n",
+    "# Create figure\n",
+    "fig = go.Figure()\n",
+    "\n",
+    "# Add traces, one for each slider step\n",
+    "for step in np.arange(0, 5, 0.1):\n",
+    "    fig.add_trace(\n",
+    "        go.Scatter(\n",
+    "            visible=False,\n",
+    "            line=dict(color=\"#00CED1\", width=6),\n",
+    "            name=\"𝜈 = \" + str(step),\n",
+    "            x=np.arange(0, 10, 0.01),\n",
+    "            y=np.sin(step * np.arange(0, 10, 0.01))))\n",
+    "\n",
+    "# Make 10th trace visible\n",
+    "fig.data[10].visible = True\n",
+    "\n",
+    "# Create and add slider\n",
+    "steps = []\n",
+    "for i in range(len(fig.data)):\n",
+    "    step = dict(\n",
+    "        method=\"update\",\n",
+    "        args=[{\"visible\": [False] * len(fig.data)},\n",
+    "              {\"title\": \"Slider switched to step: \" + str(i)}],  # layout attribute\n",
+    "    )\n",
+    "    step[\"args\"][0][\"visible\"][i] = True  # Toggle i'th trace to \"visible\"\n",
+    "    steps.append(step)\n",
+    "\n",
+    "sliders = [dict(\n",
+    "    active=10,\n",
+    "    currentvalue={\"prefix\": \"Frequency: \"},\n",
+    "    pad={\"t\": 50},\n",
+    "    steps=steps\n",
+    ")]\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    sliders=sliders\n",
+    ")\n",
+    "\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plotly Express also provide sliders, but with implicit animation using the \"animate\" method described above. The animation play button can be ommited by removing updatemenus in the layout:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "\n",
+    "df = px.data.gapminder()\n",
+    "fig = px.scatter(df, x=\"gdpPercap\", y=\"lifeExp\", animation_frame=\"year\", animation_group=\"country\",\n",
+    "           size=\"pop\", color=\"continent\", hover_name=\"country\",\n",
+    "           log_x=True, size_max=55, range_x=[100,100000], range_y=[25,90])\n",
+    "\n",
+    "fig[\"layout\"].pop(\"updatemenus\") # optional, drop animation buttons\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Range Slider\n",
+    "You can find more examples on using range sliders [here](https://plotly.com/python/range-slider/)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load data\n",
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/plotly/datasets/master/finance-charts-apple.csv\")\n",
+    "df.columns = [col.replace(\"AAPL.\", \"\") for col in df.columns]\n",
+    "\n",
+    "# Create figure\n",
+    "fig = go.Figure()\n",
+    "\n",
+    "fig.add_trace(\n",
+    "    go.Scatter(x=list(df.Date), y=list(df.High)))\n",
+    "\n",
+    "# Set title\n",
+    "fig.update_layout(\n",
+    "    title_text=\"Time series with range slider and selectors\"\n",
+    ")\n",
+    "\n",
+    "# Add range slider\n",
+    "fig.update_layout(\n",
+    "    xaxis=dict(\n",
+    "        rangeselector=dict(\n",
+    "            buttons=list([ # Predefined ranges for the buttons\n",
+    "                dict(count=1,\n",
+    "                     label=\"1m\",\n",
+    "                     step=\"month\",\n",
+    "                     stepmode=\"backward\"),\n",
+    "                dict(count=6,\n",
+    "                     label=\"6m\",\n",
+    "                     step=\"month\",\n",
+    "                     stepmode=\"backward\"),\n",
+    "                dict(count=1,\n",
+    "                     label=\"YTD\",\n",
+    "                     step=\"year\",\n",
+    "                     stepmode=\"todate\"),\n",
+    "                dict(count=1,\n",
+    "                     label=\"1y\",\n",
+    "                     step=\"year\",\n",
+    "                     stepmode=\"backward\"),\n",
+    "                dict(step=\"all\")\n",
+    "            ])\n",
+    "        ),\n",
+    "        rangeslider=dict(\n",
+    "            visible=True\n",
+    "        ),\n",
+    "        type=\"date\"\n",
+    "    )\n",
+    ")\n",
+    "\n",
+    "fig.show()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 2
 }
