--- a/6_DataViz/2_dataviz_in_python.ipynb
+++ b/6_DataViz/2_dataviz_in_python.ipynb
@@ -9,6 +9,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install plotly==4.9.0"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
