--- a/5_wrangle_pandas.ipynb
+++ b/5_wrangle_pandas.ipynb
@@ -44,7 +44,21 @@
       },
       "source": [
         "# Wrangle Data with Pandas I\n",
-        "[Pandas](https://pandas.pydata.org/pandas-docs/stable/index.html) dataframe demonstration. "
+        "\n",
+        "El Data Wrangling se trata de limpiar, unificar, consolidar y normalizar los datos para que se puedan utilizar y lograr extraer información.\n",
+        "\n",
+        "[Pandas](https://pandas.pydata.org/pandas-docs/stable/index.html) \n",
+        "dataframe demonstration. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Krls5CON7xf5",
+        "colab_type": "text"
+      },
+      "source": [
+        "primero declaramos la dirección."
       ]
     },
     {
@@ -60,6 +74,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eB7UgWxG76Pw",
+        "colab_type": "text"
+      },
+      "source": [
+        "importamos el paquete pandas y leemos la información.\n"
+      ]
     },
     {
       "cell_type": "code",
