--- a/4_DataWrangling/01_data_extraction_nasa_esp.ipynb
+++ b/4_DataWrangling/01_data_extraction_nasa_esp.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/manlio99/Materia-de-aprendizaje/blob/master/4_DataWrangling/1_data_extraction_nasa_esp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/manlio99/Materia-de-aprendizaje/blob/master/4_DataWrangling/01_data_extraction_nasa_esp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -45,7 +45,7 @@
       "source": [
         "# Extracción de datos: NASA\n",
         "\n",
-        "Las fuentes de datos son muy diversas. Muchas fuentes oficiales nos proporcionan datos en línea sin procesar a los que podemos acceder directamente con bibliotecas de Python como [pandas] (https://pandas.pydata.org/). Ahora mostramos una serie de ejemplos sobre cómo recuperar datos de hojas de cálculo __txt__ sin procesar de [NASA GISS] (https://data.giss.nasa.gov/). Para obtener una guía completa sobre cómo cargar varios tipos de datos en marcos de datos de pandas, consulte [IO tools] (https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html)."
+        "Las fuentes de datos son muy diversas. Muchas fuentes oficiales nos proporcionan datos en línea sin procesar a los que podemos acceder directamente con bibliotecas de Python como pandas (https://pandas.pydata.org/). Ahora mostramos una serie de ejemplos sobre cómo recuperar datos de hojas de cálculo __txt__ sin procesar de NASA GISS (https://data.giss.nasa.gov/). Para obtener una guía completa sobre cómo cargar varios tipos de datos en marcos de datos de pandas, consulte IO tools (https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html)."
       ]
     },
     {
@@ -84,7 +84,7 @@
       "source": [
         "## Anomalía global de la temperatura del aire en la superficie\n",
         "\n",
-        "Fuente: [Análisis de la temperatura de la superficie del Instituto Goddard de Estudios Espaciales (GISS) de la NASA] (http://data.giss.nasa.gov/gistemp/).\n",
+        "Fuente: Análisis de la temperatura de la superficie del Instituto Goddard de Estudios Espaciales (GISS) de la NASA (http://data.giss.nasa.gov/gistemp/).\n",
         "\n",
         "\n",
         "### El archivo de datos\n",
@@ -511,7 +511,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Finalmente, graficamos(plot) ambas series usando seaborn y matplotlib:"
+        "Finalmente, graficamos**(plot)** ambas series usando seaborn y matplotlib:"
       ]
     },
     {
@@ -567,7 +567,7 @@
       "source": [
         "## Gases CO2 de la NASA\n",
         "\n",
-        "Fuente: [NASA GISS: Forzamientos en el modelo climático de GISS] (http://data.giss.nasa.gov/modelforce/ghgases/).\n",
+        "Fuente: NASA GISS: Forzamientos en el modelo climático de GISS (http://data.giss.nasa.gov/modelforce/ghgases/).\n",
         "\n",
         "### El archivo de datos\n",
         "\n",
@@ -926,7 +926,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Ahora estamos listos para analizar el archivo en un marco de datos:"
+        "Ahora estamos listos para analizar el archivo en un marco de datos **(dataframe)**:"
       ]
     },
     {
@@ -1098,7 +1098,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Podemos combinar datos de ambos archivos, anomalías de temperatura y niveles de co2 en un solo marco de datos utilizando [df.merge] (https://pandas.pydata.org/pandas-docs/stable/user_guide/merging.html):"
+        "Podemos combinar datos de ambos archivos, anomalías de temperatura y niveles de co2 en un solo marco de datos utilizando **df.merge** (https://pandas.pydata.org/pandas-docs/stable/user_guide/merging.html):"
       ]
     },
     {
