--- a/4_DataWrangling/02_data_extraction_sat_esp.ipynb
+++ b/4_DataWrangling/02_data_extraction_sat_esp.ipynb
@@ -45,7 +45,7 @@
       "source": [
         "# Extracción de datos: hojas de cálculo de educación de California\n",
         "\n",
-        "Las fuentes de datos son muy diversas. Muchas fuentes oficiales nos proporcionan datos en línea sin procesar a los que podemos acceder directamente con bibliotecas de Python como [pandas] (https://pandas.pydata.org/). Ahora mostramos una serie de ejemplos sobre cómo recuperar datos de hojas de cálculo __Excel__ de [resultados de la prueba SAT] (https://www.cde.ca.gov/ds/sp/ai/). Más paquetes [aquí] (http://www.python-excel.org/) para trabajar con hojas de cálculo de Excel y Python. Para obtener una guía completa sobre cómo cargar varios tipos de datos en marcos de datos de pandas, consulte [IO tools] (https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html)."
+        "Las fuentes de datos son muy diversas. Muchas fuentes oficiales nos proporcionan datos en línea sin procesar a los que podemos acceder directamente con bibliotecas de Python como pandas (https://pandas.pydata.org/). Ahora mostramos una serie de ejemplos sobre cómo recuperar datos de hojas de cálculo __Excel__ de resultados de la prueba SAT (https://www.cde.ca.gov/ds/sp/ai/). Más paquetes aquí (http://www.python-excel.org/) para trabajar con hojas de cálculo de Excel y Python. Para obtener una guía completa sobre cómo cargar varios tipos de datos en marcos de datos de pandas, consulte IO tools (https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html)."
       ]
     },
     {
@@ -73,17 +73,17 @@
         "colab_type": "text"
       },
       "source": [
-        "422/5000\n",
+        "\n",
         "## Resultados del puntaje de preparación postsecundaria de California\n",
         "\n",
         "Proporciona resultados de pruebas estandarizadas de las pruebas SAT, ACT y AP que miden el rendimiento de los estudiantes de secundaria.\n",
         "\n",
-        "Fuente: [Resultados de las pruebas SAT, ACT y AP] (http://www.cde.ca.gov/ds/sp/ai/).\n",
+        "Fuente: Resultados de las pruebas SAT, ACT y AP (http://www.cde.ca.gov/ds/sp/ai/).\n",
         "\n",
         "\n",
         "### El archivo de datos\n",
         "\n",
-        "- Enlace directo al archivo de datos de origen: [http://www3.cde.ca.gov/researchfiles/satactap/sat19.xlsx](http://www3.cde.ca.gov/researchfiles/satactap/sat19.xlsx )"
+        "- Enlace directo al archivo de datos de origen: http://www3.cde.ca.gov/researchfiles/satactap/sat19.xlsx(http://www3.cde.ca.gov/researchfiles/satactap/sat19.xlsx )"
       ]
     },
     {
@@ -123,7 +123,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Ahora estamos listos para abrirlo con [`xlrd.open_workbook`] (https://xlrd.readthedocs.io/en/latest/api.html):"
+        "Ahora estamos listos para abrirlo con **`xlrd.open_workbook`** (https://xlrd.readthedocs.io/en/latest/api.html):"
       ]
     },
     {
@@ -146,7 +146,7 @@
         "colab_type": "text"
       },
       "source": [
-        "* xlrd * nos permite abrir una de las hojas xlsx. También es posible obtener el índice de la fila del encabezado buscando las etiquetas de sus columnas:"
+        "***xlrd*** nos permite abrir una de las hojas **xlsx**. También es posible obtener el índice de la fila del encabezado buscando las etiquetas de sus columnas:"
       ]
     },
     {
@@ -582,7 +582,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Otra opción es cargar directamente desde la URL en un marco de datos de pandas usando [`pd.read_excel`] (https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_excel.html):"
+        "Otra opción es cargar directamente desde la URL en un marco de datos de pandas usando pd.read_excel (https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_excel.html):"
       ]
     },
     {
