--- a/4_DataWrangling/03_data_extraction_texas_death_row_executions_esp.ipynb
+++ b/4_DataWrangling/03_data_extraction_texas_death_row_executions_esp.ipynb
@@ -45,7 +45,7 @@
       "source": [
         "# Extracción de datos: delincuentes ejecutados en Texas\n",
         "\n",
-        "Las fuentes de datos son muy diversas. Muchas fuentes oficiales nos proporcionan datos en línea sin procesar a los que podemos acceder directamente con bibliotecas de Python como [pandas] (https://pandas.pydata.org/). Ahora mostramos una serie de ejemplos sobre cómo recuperar datos __HTML__ de [Texas Executed Offenders] (http://wgetsnaps.github.io/tdcj-state-tx-us--death_row/death_row/dr_executed_offenders.html). Para obtener una guía completa sobre cómo cargar varios tipos de datos en marcos de datos de pandas, consulte [IO tools] (https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html)."
+        "Las fuentes de datos son muy diversas. Muchas fuentes oficiales nos proporcionan datos en línea sin procesar a los que podemos acceder directamente con bibliotecas de Python como pandas (https://pandas.pydata.org/). Ahora mostramos una serie de ejemplos sobre cómo recuperar datos __HTML__ de Texas Executed Offenders (http://wgetsnaps.github.io/tdcj-state-tx-us--death_row/death_row/dr_executed_offenders.html). Para obtener una guía completa sobre cómo cargar varios tipos de datos en marcos de datos de pandas, consulte IO tools (https://pandas.pydata.org/pandas-docs/stable/user_guide/io.html)."
       ]
     },
     {
@@ -77,7 +77,7 @@
         "\n",
         "Proporciona datos sobre delincuentes ejecutados del Departamento de Justicia Penal de Texas.\n",
         "\n",
-        "Fuente: [TEO] (http://wgetsnaps.github.io/tdcj-state-tx-us--death_row/death_row/dr_executed_offenders.html).\n",
+        "Fuente: TEO (http://wgetsnaps.github.io/tdcj-state-tx-us--death_row/death_row/dr_executed_offenders.html).\n",
         "\n",
         "\n",
         "### El archivo de datos\n",
@@ -6283,7 +6283,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Lea y seleccione los datos de la tabla usando * BeautifulSoup * [`html.parser`] (https://www.crummy.com/software/BeautifulSoup/bs4/doc/):"
+        "Lea y seleccione los datos de la tabla usando * BeautifulSoup * [`html.parser`](https://www.crummy.com/software/BeautifulSoup/bs4/doc/):"
       ]
     },
     {
@@ -12869,7 +12869,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Otra opción es cargar directamente el texto HTML en un marco de datos de pandas usando [`pd.read_html`] (https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_html.html):"
+        "Otra opción es cargar directamente el texto HTML en un marco de datos de pandas usando [`pd.read_html`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_html.html):"
       ]
     },
     {
