--- a/4_DataWrangling/01_data_extraction_sat_esp.ipynb
+++ b/4_DataWrangling/01_data_extraction_sat_esp.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/manlio99/Materia-de-aprendizaje/blob/master/4_DataWrangling/02_data_extraction_sat_esp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/manlio99/Materia-de-aprendizaje/blob/master/4_DataWrangling/01_data_extraction_sat_esp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -56,10 +56,10 @@
         "colab": {}
       },
       "source": [
-        "# perform web requests from an url\n",
+        "# realizar solicitudes web desde una URL\n",
         "import requests\n",
         "\n",
-        "# xlrd helps us to extract data from Excel spreadsheets (.xls and .xlsx)\n",
+        "# xlrd nos ayuda a extraer datos de hojas de cálculo de Excel (.xls y .xlsx)\n",
         "# https://xlrd.readthedocs.io/en/latest/\n",
         "from xlrd import open_workbook"
       ],
@@ -106,7 +106,7 @@
         "colab": {}
       },
       "source": [
-        "# download and save file locally\n",
+        "#descargar y guardar el archivo localmente\n",
         "source_data_url_sat = \"http://www3.cde.ca.gov/researchfiles/satactap/sat19.xlsx\"\n",
         "sat_file = requests.get(source_data_url_sat)\n",
         "\n",
@@ -158,13 +158,13 @@
         "outputId": "4f355619-0b2b-42bc-d9b7-1e62d7b05220"
       },
       "source": [
-        "# first sheet\n",
+        "#primera hoja\n",
         "sheet = book.sheets()[0]\n",
         "\n",
-        "# index of the heading row (one of the columns is named 'CDS')\n",
+        "# índice de la fila de encabezado (una de las columnas se llama 'CDS')\n",
         "first_row_idx = sheet.col_values(0).index('CDS')\n",
         "\n",
-        "# print the heading line \n",
+        "#imprimir la línea de encabezado\n",
         "print(sheet.row_values(first_row_idx))"
       ],
       "execution_count": null,
@@ -198,7 +198,7 @@
         "outputId": "dce73ba2-c320-4f9b-949d-10163b6c444f"
       },
       "source": [
-        "# python list of lists. Each xlsx row is packed into a list [...]\n",
+        "#lista de listas de Python. Cada fila xlsx se empaqueta en una lista [...]\n",
         "datarows =  [sheet.row_values(i) for i in range(first_row_idx+1, sheet.nrows)]\n",
         "print(datarows)"
       ],
@@ -232,11 +232,11 @@
         "outputId": "e8d3747e-2c74-4a03-da0f-23692e9f7140"
       },
       "source": [
-        "# import pandas to use pandas DataFrame \n",
+        "#importar pandas para usar pandas DataFrame\n",
         "import pandas as pd \n",
         "pd.set_option(\"max_rows\", 8)              \n",
         "\n",
-        "# create the dataframe\n",
+        "#crear el marco de datos\n",
         "sat19 = pd.DataFrame(datarows, columns = sheet.row_values(first_row_idx)) \n",
         "sat19"
       ],
@@ -594,8 +594,8 @@
         "outputId": "6fe859e2-1b15-45ef-a0c9-9ad2b338bc86"
       },
       "source": [
-        "# load the file, notice we still need to indicate the header row\n",
-        "# we can indicate column types using dtype={'CDS': object ...}\n",
+        "# Una vez cargado el archivo, observe que todavía necesitamos indicar la fila del encabezado\n",
+        "# podemos indicar los tipos de columna usando dtype = {'CDS': object ...}\n",
         "sat19_df = pd.read_excel(source_data_url_sat, header=first_row_idx, dtype={'CDS': object})  \n",
         "sat19_df"
       ],
