--- a/4_DataWrangling/02_data_extraction_texas_death_row_executions_esp.ipynb
+++ b/4_DataWrangling/02_data_extraction_texas_death_row_executions_esp.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/manlio99/Materia-de-aprendizaje/blob/master/4_DataWrangling/03_data_extraction_texas_death_row_executions_esp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/manlio99/Materia-de-aprendizaje/blob/master/4_DataWrangling/02_data_extraction_texas_death_row_executions_esp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -56,10 +56,10 @@
         "colab": {}
       },
       "source": [
-        "# perform web requests from an url\n",
+        "#realiza solicitudes web desde una URL\n",
         "import requests\n",
         "\n",
-        "# python library for pulling data out of HTML and XML files\n",
+        "# biblioteca de Python para extraer datos de archivos HTML y XML\n",
         "# https://www.crummy.com/software/BeautifulSoup/bs4/doc/\n",
         "from bs4 import BeautifulSoup"
       ],
@@ -104,11 +104,11 @@
         "colab": {}
       },
       "source": [
-        "# load the html\n",
+        "# carga el html\n",
         "source_data_url_teo = \"http://wgetsnaps.github.io/tdcj-state-tx-us--death_row/death_row/dr_executed_offenders.html\"\n",
         "teo_file = requests.get(source_data_url_teo)\n",
         "\n",
-        "# get the content\n",
+        "# obtiene el contenido\n",
         "teo_html = teo_file.text"
       ],
       "execution_count": null,
@@ -6295,10 +6295,10 @@
         "outputId": "1336aa22-524d-42c8-f439-ab6415672a7a"
       },
       "source": [
-        "# parse the html\n",
+        "# parse el html\n",
         "executed_doc = BeautifulSoup(teo_html, 'html.parser')\n",
         "\n",
-        "# skip first row of headers\n",
+        "# omitir la primera fila de encabezados\n",
         "executed_rows = executed_doc.select('table.os tr')[1:] \n",
         "executed_rows"
       ],
@@ -11786,7 +11786,7 @@
         "outputId": "f4deaffd-b067-4703-de72-0580029ab0d2"
       },
       "source": [
-        "# website title\n",
+        "# titulo del website\n",
         "executed_doc.title.string"
       ],
       "execution_count": null,
@@ -11843,7 +11843,7 @@
         "outputId": "8da59627-a55a-4387-fe3e-5c1371051e83"
       },
       "source": [
-        "# query\n",
+        "# consulta\n",
         "executed_doc.find_all('a')"
       ],
       "execution_count": null,
@@ -12881,12 +12881,12 @@
         "outputId": "36a16b44-3a16-4716-df84-2225b8357502"
       },
       "source": [
-        "# import pandas to use pandas DataFrame \n",
+        "# importar pandas para usar pandas DataFrame\n",
         "import pandas as pd \n",
         "pd.set_option(\"max_rows\", 8)    \n",
         "\n",
-        "# create the dataframe\n",
-        "teo_df = pd.read_html(teo_html)[0] # it reaturns a list of dataframes, one per html table. \n",
+        "# crea el dataframe\n",
+        "teo_df = pd.read_html(teo_html)[0] # devuelve una lista de dataframes, uno por tabla html. \n",
         "teo_df"
       ],
       "execution_count": null,
