--- a/4_DataWrangling/03_data_extraction_amazon_esp.ipynb
+++ b/4_DataWrangling/03_data_extraction_amazon_esp.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/manlio99/Materia-de-aprendizaje/blob/master/4_DataWrangling/04_data_extraction_amazon_esp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/manlio99/Materia-de-aprendizaje/blob/master/4_DataWrangling/03_data_extraction_amazon_esp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -95,7 +95,7 @@
         "\n",
         "source_data_url_ami = \"https://raw.githubusercontent.com/emmanueliarussi/DataScienceCapstone/master/4_DataWrangling/data/Musical_Instruments_5.json\"\n",
         "\n",
-        "# Notice lines=True means the json file contains multiple objects \n",
+        "# Notice lines = True significa que el archivo json contiene varios objetos\n",
         "data = pd.read_json(source_data_url_ami, lines=True)\n",
         "data"
       ],
