--- a/4_DataWrangling/04_data_extraction_nasa_esp.ipynb
+++ b/4_DataWrangling/04_data_extraction_nasa_esp.ipynb
@@ -33,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/manlio99/Materia-de-aprendizaje/blob/master/4_DataWrangling/01_data_extraction_nasa_esp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/manlio99/Materia-de-aprendizaje/blob/master/4_DataWrangling/04_data_extraction_nasa_esp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -66,10 +66,10 @@
         "colab": {}
       },
       "source": [
-        "# parsing will require extra help\n",
+        "# el parseo requerirá ayuda adicional\n",
         "import re\n",
         "\n",
-        "# perform web requests from an url\n",
+        "# requests realiza solicitudes web desde una URL\n",
         "import requests"
       ],
       "execution_count": null,
@@ -365,11 +365,11 @@
         "outputId": "0806a4b4-2e5c-4981-9b3b-25136230b7a4"
       },
       "source": [
-        "# import pandas to use pandas DataFrame \n",
+        "# importa pandas para usar DataFrame \n",
         "import pandas as pd \n",
         "pd.set_option(\"max_rows\", 8)              \n",
         "\n",
-        "# create the dataframe\n",
+        "# crea el dataframe\n",
         "df_temp_anomaly = pd.DataFrame(data_tuples_temp_anomaly, columns =['Year', 'Annual_Mean', '5-year_Mean']) \n",
         "df_temp_anomaly"
       ],
@@ -492,10 +492,10 @@
         "colab": {}
       },
       "source": [
-        "# replace '*' with NaNs\n",
+        "# reemplaza '*' con NaNs\n",
         "df_temp_anomaly = df_temp_anomaly.replace('*', 'nan')\n",
         "\n",
-        "# use a dictionary of types to convert specific columns \n",
+        "# usa el dictionario de tipos para convertir columnas especificas\n",
         "types_dict_temp_anomaly = {'Year': int, 'Annual_Mean': float, '5-year_Mean': float} \n",
         "df_temp_anomaly = df_temp_anomaly.astype(types_dict_temp_anomaly) \n",
         "\n",
@@ -642,7 +642,7 @@
         "outputId": "774bb6ec-403a-4fc5-b7fc-0c088f3760b0"
       },
       "source": [
-        "# read the gases data to file\n",
+        "# leer los datos de gases en una variable\n",
         "source_data_url_co2 = 'http://data.giss.nasa.gov/modelforce/ghgases/Fig1A.ext.txt'\n",
         "resp_co2 = requests.get(source_data_url_co2)\n",
         "txt_co2 = resp_co2.text\n",
@@ -683,7 +683,7 @@
         "outputId": "141ffb90-9246-4564-be4a-3c8c47660e54"
       },
       "source": [
-        "# Count lines\n",
+        "# cuenta lineas\n",
         "stop_line_num = [x.strip() for x in txt_co2.splitlines()].index('Global Mean CO2 Mixing Ratio (ppm): Future Scenarios')\n",
         "print('Future Scenarios starts at line {} '.format(stop_line_num))"
       ],
@@ -707,7 +707,7 @@
         "outputId": "82e250e2-ad08-4d92-bb27-c3a597ce62db"
       },
       "source": [
-        "# get the lines before Future Scenarios section\n",
+        "# obtenga las líneas antes de la sección Escenarios futuros\n",
         "excerpt = \"\\n\".join(txt_co2.splitlines()[:stop_line_num])\n",
         "excerpt"
       ],
@@ -737,7 +737,7 @@
         "outputId": "66d4d53c-53e1-4987-d6a0-14e2382d1ca3"
       },
       "source": [
-        "# get the tuples\n",
+        "# obtiene las tuplas\n",
         "pattern_co2     = re.compile(r'(\\b\\d{4})  (\\d{3}\\.\\d{1,2}\\b)')\n",
         "data_tuples_co2 = re.findall(pattern_co2, excerpt)\n",
         "data_tuples_co2"
@@ -938,14 +938,14 @@
         "outputId": "c93c6822-c313-42cd-eea4-4640a2c4994e"
       },
       "source": [
-        "# create the dataframe\n",
+        "# crea el dataframe\n",
         "df_co2 = pd.DataFrame(data_tuples_co2, columns =['Year', 'MixR']) \n",
         "\n",
         "# use a dictionary of types to convert specific columns \n",
         "types_dict_co2 = {'Year': int, 'MixR': float} \n",
         "df_co2 = df_co2.astype(types_dict_co2) \n",
         "\n",
-        "# sort by year\n",
+        "# ordenar por año\n",
         "df_co2 = df_co2.sort_values(by=['Year'])\n",
         "\n",
         "df_co2"
@@ -1060,7 +1060,7 @@
         "outputId": "bc4ddba9-a2a4-4a42-b243-27a5e13c28d0"
       },
       "source": [
-        "# And plot\n",
+        "# y graficar\n",
         "df_co2.plot.line(x='Year', y='MixR')"
       ],
       "execution_count": null,
@@ -1110,13 +1110,13 @@
         "outputId": "93940d9f-2b8e-4bea-fae1-c4f23b5a7596"
       },
       "source": [
-        "# we merge both dataframes using Year as the merging key\n",
+        "# fusionamos ambos dataframes usando Year como clave de fusión\n",
         "df_temp_anomaly_co2 = pd.merge(df_co2, df_temp_anomaly, on='Year')\n",
         "\n",
-        "# drop the 5-year_Mean column\n",
+        "# eliminar la columna 5-year_Mean\n",
         "df_temp_anomaly_co2 = df_temp_anomaly_co2.drop(columns=['5-year_Mean'])\n",
         "\n",
-        "# set Year as the index\n",
+        "# establecer el año como índice\n",
         "df_temp_anomaly_co2 = df_temp_anomaly_co2.set_index('Year')\n",
         "df_temp_anomaly_co2"
       ],
